# law-expert-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml
deploy/postgres_db/: postgres_init.sql
genesis/: asgi.py  settings.py  urls.py  wsgi.py
genesis/apps/games/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
genesis/apps/games/migrations/: 0001_initial.py  0002_alter_game_options_alter_game_description_and_more.py
genesis/helpers/: fill_db.py
src/apps/games/: admin.py  models.py  serializers.py  urls.py  views.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/helpers/: fill_db.py
